[project]
name = "rvc-gui"
version = "0.2.0"
description = "RVC GUI - Retrieval-based Voice Conversion GUI (uv-managed, modern CUDA 13.2 / Python 3.10 stack)"
readme = "README.md"
requires-python = ">=3.10,<3.11"
license = { text = "MIT" }
authors = [
    { name = "FranzFischer78" },
]
keywords = ["rvc", "voice-conversion", "ai", "torch", "cuda", "uv"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

# ---------------------------------------------------------------------------
# Runtime dependencies
#
# The numerical/audio stack (numba / llvmlite / numpy / scipy / librosa) is kept
# on the same minor versions as the original `requirements.txt` because those
# versions are tightly coupled and known to load the bundled `.pth` checkpoints
# produced by the original RVC training pipeline. Bumping them blindly would
# risk breaking checkpoint compatibility.
#
# `torch` and `torchvision` are explicitly pinned to recent stable releases
# that ship CUDA 13.2-enabled wheels from the dedicated PyTorch index declared
# in `[[tool.uv.index]]` below.
#
# `torchaudio` is intentionally NOT a hard runtime dependency:
#   * RVC-GUI's source code never imports `torchaudio` (audio I/O goes through
#     `soundfile`, `librosa`, and `scipy.io.wavfile`).
#   * The PyTorch cu132 channel does not publish x86_64 / win_amd64 torchaudio
#     wheels — only aarch64 wheels for older versions exist.
#   * PyPI's torchaudio wheels are tightly version-pinned to specific torch
#     versions (e.g. torchaudio 2.10.0 requires torch==2.10.0), so installing
#     a PyPI torchaudio alongside torch 2.12.1 would force a downgrade.
# Users who genuinely need torchaudio can opt in via the `torchaudio` extra.
# See README.md "PyTorch & CUDA" section for details.
# ---------------------------------------------------------------------------
dependencies = [
    # --- PyTorch stack (CUDA 13.2 wheels pulled from the PyTorch index) ---
    "torch==2.12.1",
    "torchvision==0.27.1",
    # --- Numerical / audio stack (kept aligned with original RVC pipeline) ---
    "numba==0.56.4",
    "numpy==1.23.5",
    "scipy==1.9.3",
    "librosa==0.9.2",
    "llvmlite==0.39.0",
    # --- faiss: CPU-only, unified across platforms ---
    # The original `requirements.txt` used `1.7.0` on macOS and `1.7.2` on
    # other platforms, but neither of those versions publishes cp310 wheels
    # for macOS. We bump both to `1.7.4`, which is the closest upstream
    # release that ships cp310 wheels for macOS, Linux, and Windows.
    "faiss-cpu==1.7.4",
    # --- ML / model utilities ---
    "fairseq==0.12.2",
    "torchcrepe",
    # `functorch` is intentionally NOT listed: it was merged into `torch`
    # core starting with torch 2.1, so installing the standalone
    # `functorch` PyPI package would force torch<2.1 and break the cu132
    # build. The `torch.func.*` API surface replaces it.
    # `torchgen` is also intentionally omitted — it is a torch-internal
    # code-generation tool not imported by RVC-GUI's source.
    "tensorboardX",
    "tensorboard",
    "tensorboard-data-server",
    "tensorboard-plugin-wit",
    # --- Audio I/O ---
    "pydub>=0.25.1",
    "soundfile>=0.12.1",
    "ffmpeg-python>=0.2.0",
    "audioread",
    "praat-parselmouth>=0.4.3",
    "pyworld>=0.3.2",
    "resampy>=0.4.2",
    # --- UI ---
    "gradio",
    "customtkinter",
    # --- Scientific / plotting ---
    "matplotlib>=3.7.1",
    "matplotlib-inline>=0.1.6",
    "scikit-learn>=1.2.2",
    "Pillow>=9.1.1",
    "tabulate>=0.9.0",
    # --- Web stack used by gradio / tensorboard ---
    "starlette>=0.26.1",
    "uvicorn>=0.21.1",
    "tornado>=6.2",
    "Werkzeug>=2.2.3",
    "Jinja2>=3.1.2",
    "Markdown",
    "PyYAML>=6.0",
    # --- Misc utilities ---
    "Cython",
    "future>=0.18.3",
    "json5>=0.9.11",
    "tqdm>=4.65.0",
    "uc-micro-py>=1.0.1",
    "sympy>=1.11.1",
    "pyasn1>=0.4.8",
    "pyasn1-modules>=0.2.8",
    "fsspec>=2023.3.0",
    "absl-py>=1.4.0",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
# Optional torchaudio install for users who genuinely need it.
# WARNING: PyPI's torchaudio wheels are pinned to specific torch versions
# (e.g. torchaudio 2.10.0 requires torch==2.10.0). Installing this extra will
# therefore DOWNGRADE torch away from the cu132 build and is NOT recommended
# for normal RVC-GUI use. Audio I/O in RVC-GUI uses soundfile / librosa /
# scipy.io.wavfile and does NOT require torchaudio.
torchaudio = [
    "torchaudio",
]

# Convenience extra for users without an NVIDIA GPU. When this extra is
# installed, comment out / disable the `pytorch-cu132` index in
# `[[tool.uv.index]]` and re-run `uv sync` so torch + torchvision are pulled
# from PyPI (CPU wheels) instead.
cpu = []

[project.urls]
Homepage = "https://github.com/FranzFischer78/RVC-GUI"
Repository = "https://github.com/FranzFischer78/RVC-GUI"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# This project is an application, not a packaged library. We expose the
# repository root as the wheel root so that `uv run python rvcgui.py`
# continues to work after `uv sync`.
packages = ["."]

# ---------------------------------------------------------------------------
# uv configuration
# ---------------------------------------------------------------------------
[tool.uv]
# Require a reasonably modern uv so that [[tool.uv.index]] `explicit = true`
# and `[tool.uv.sources]` index pinning are honored.
required-version = ">=0.5.0"

# Enable wheel caching across runs (the cache lives under UV_CACHE_DIR or
# ~/.cache/uv by default).
cache-keys = [
    { file = "pyproject.toml" },
    { file = "requirements.txt" },
]

# ---------------------------------------------------------------------------
# PyTorch CUDA wheel index
#
# uv resolves package sources via `[[tool.uv.index]]` entries. We declare the
# official PyTorch CUDA 13.2 wheel index as an *explicit* index and pin
# `torch` and `torchvision` to it via `[tool.uv.sources]` so that `uv sync`
# pulls the GPU-enabled wheels instead of the CPU-only wheels published on
# PyPI.
#
# CUDA 13.2 (cu132) is the newest CUDA variant published by PyTorch as of
# torch 2.12.x. To switch CUDA variants later (e.g. cu128), change the URL
# below to `https://download.pytorch.org/whl/cu128` and re-run `uv lock`.
#
# Note: `torchaudio` is intentionally NOT pinned to this index because the
# cu132 channel does not publish x86_64 / win_amd64 torchaudio wheels.
# torchaudio will be resolved from PyPI (CPU wheel) instead.
# ---------------------------------------------------------------------------
[[tool.uv.index]]
name = "pytorch-cu132"
url = "https://download.pytorch.org/whl/cu132"
explicit = true

# Pin the two torch packages to the PyTorch CUDA 13.2 index so they are never
# silently resolved to the PyPI CPU wheels.
[tool.uv.sources]
torch = { index = "pytorch-cu132" }
torchvision = { index = "pytorch-cu132" }

# ---------------------------------------------------------------------------
# Dev tooling (optional)
# ---------------------------------------------------------------------------
[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
